--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,8 @@ tablib==3.8.0
 text-unidecode==1.3
 tzdata==2025.1
 gunicorn
+whitenoise
+whitenoise.runserver_nostatic
 opencv-python-headless
 pyzbar[scripts]
 zxing
